src/objects/Queue_Manager_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <externalId>true</externalId>
        <label>Queue Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Send_Email_Alerts_to_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is set to true, and the field is references in workflow rule criteria, it can be used to prevent notifications from being sent to the Queue.</description>
        <label>Send Email Alerts to Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Queue_Manager_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Queue Manager Mapping</label>
    <listViews>
        <fullName>ABC_Queue_Manager_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>ABC</label>
        <queue>ABC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACS_Queue_Manager_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>ACS</label>
        <queue>ACS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Application_Development_Queue_Manager_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>Application Development</label>
        <queue>Application_Development</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMC_Client_Management_Queue_Manager_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>BMC Client Management</label>
        <queue>BMC_Client_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Card_Services_Queue_Manager_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>Card Services</label>
        <queue>Card_Services</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Change_Advisory_Board_Queue_Manager_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>Change Advisory Board</label>
        <queue>Change_Advisory_Board</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Change_Management_Queue_Manager_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>Change Management</label>
        <queue>Change_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_Services_Queue_Manager_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>Client Services</label>
        <queue>Client_Services</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEF_Queue_Manager_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>DEF</label>
        <queue>DEF</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Desk_Side_Support_Queue_Manager_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>Desk Side Support</label>
        <queue>Desk_Side_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Email_Admin_Queue_Manager_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>Email and Messaging</label>
        <queue>Email_Admin</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Emergency_CAB_Queue_Manager_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>Emergency CAB</label>
        <queue>Emergency_CAB</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enterprise_Platform_Queue_Manager_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>Enterprise Platform</label>
        <queue>Enterprise_Platform</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Facilities_Management_Queue_Manager_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>Facilities Management</label>
        <queue>Facilities_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HR_Sys_Admin_Queue_Manager_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>HR Sys Admin</label>
        <queue>HR_Sys_Admin</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue Manager Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>